# TogePy

./: .gitignore  README.md  main.py  pyproject.toml  utility.py  uv_check  uv_verify
.githooks/: pre-commit
.github/workflows/: cd.yml  ci.yml  ci_cd.yml  metronome.yml  playwright.yml
cli/: main.py  pokeclasses.py
modules/: api.py  helpers.py
tests/: test_pokemon.py
togepy/: __main__.py  app_test.py  main.py  main_old.py  pokeclasses.py
togepy/api/: api.py
togepy/models/: pokemon.py
togepy/react/togePy/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
togepy/react/togePy/coverage/: Card.tsx.html  SearchBar.tsx.html  clover.xml  coverage-final.json  index.html
togepy/react/togePy/src/: App.tsx
togepy/react/togePy/src/components/: Card.tsx  SearchBar.tsx
togepy/react/togePy/src/utils/: functions.ts
togepy/react/togePy/tests/: test.spec.ts  test.txt
togepy/react/togePy/unitest/: Card.test.tsx  SearchBar.test.tsx
togepy/tui/: app.py  app_old.py  app_test.py
togepy/tui/screens/: add_q_tt.py  create_team.py  delete_team.py  main_menu.py  query_menu.py  teams_menu.py  teams_view.py
