[project]
name = "togepy"
version = "0.0.1"
description = "A Pokemon Team Builder. Written in Python, TUI made with Textual."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mkdocs>=1.6.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
]

#Custom Ruff Settings
[tool.ruff]
#Enable preview rules for linting
preview = false #die saugen performance
#"PL" for pylint
#"N" for pep8-naming
#"E" for pycodestyle, beide machen Line too long oder "not enough blanks"
[tool.ruff.lint]
select = ["F", "I", "B", "UP", "PL"]

#project root manuell, wenn nicht in sys.path drin dann dazu fügen
#uv pytest doesnt find module
#ohne das fehlermeldung
[tool.pytest.ini_options]
pythonpath = [
  "."
]

#[tool.uv.scripts]
#verify = "ruff check && pytest && uv build"
#sowas wäre geil, geht aber nicht. maybe mit tomlscript

#uv run main_old.py
#conftest.py, standard of pytest, fixtures, etc, oder diesen Hack
#leere conftest.py im rootordner, dann wird syspath bei ausführen autmatisch gesetzt


#use docker container to deploy for othersq