[project]
name = "togepy"
version = "0.0.1"
description = "A Pokemon Team Builder. Written in Python, TUI made with Textual."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "textual>=8.2.7",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "mkdocs>=1.6.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.12",
]

[tool.ruff]
#Enable preview rules for linting
preview = false #experimentelle Regeln: performance schlecht
#"N" for pep8-naming
#"E" for pycodestyle, beide machen Line too long oder "not enough blanks"
[tool.ruff.lint]
select = ["F", "I", "B", "UP", "PL"]

#project root manuell, wenn nicht in sys.path drin dann dazu fügen
#uv pytest doesnt find module
#ohne das fehlermeldung
[tool.pytest.ini_options]
pythonpath = [
  "."
]